Moved things around to support other BSPs and ARCHes

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,37 @@
 
 PROJECT_ROOT := $(CURDIR)
-CROSS_PREFIX := arm-none-eabi
-ARCH := arm
-BSP := stm32
 
 SUBDIRS = bsp kernel 
 
+#ifeq ($(wildcard target.mk),)
+#$(warning "*** ERROR: target not specified")
+#endif
+
+-include $(PROJECT_ROOT)/make/target.mk
+
+# Todo: check that ARCH and BSP etc are defined
+
+.EXPORT_ALL_VARIABLES:
+
 .PHONY all: $(SUBDIRS)
+
+.PHONY install: $(SUBDIRS)
 
 .PHONY clean: $(SUBDIRS)
 
 .PHONY: $(SUBDIRS)
 $(SUBDIRS):
-	@$(MAKE) -s -C $@ CROSS_PREFIX=$(CROSS_PREFIX) PROJECT_ROOT=$(PROJECT_ROOT) ARCH=$(ARCH) BSP=$(BSP) $(MAKECMDGOALS) 
+	@$(MAKE) -s -C $@ PROJECT_ROOT=$(PROJECT_ROOT) $(MAKECMDGOALS) 
+
+ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(MAKECMDGOALS),install)
+$(MAKECMDGOALS):
+	@echo Switching to target $(MAKECMDGOALS)
+	@if [ ! -f target/$(MAKECMDGOALS).mk ]; \
+	then  \
+		echo "*** ERROR: target/$(MAKECMDGOALS).mk not found" ; \
+	else   \
+		echo "include $(PROJECT_ROOT)/target/$(MAKECMDGOALS).mk" > make/target.mk ; \
+	fi
+endif
+endif
