--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -6,8 +6,8 @@ LIBS := ../bsp/libbsp.a
 MODULE_LDFLAGS := \
     -L../bsp/ \
     -lbsp \
-    -D STM32F10X_MD_VL \
     -nostartfiles \
+    -nostdlib \
     -fno-exceptions \
     -fno-unwind-tables \
     -fno-asynchronous-unwind-tables \
@@ -21,11 +21,6 @@ MODULE_LDFLAGS := \
 
 MODULE_CPPFLAGS := \
     -I$(SRCDIR)/../bsp \
-    -I$(SRCDIR)/../bsp/stm32 \
-    -I$(SRCDIR)/../bsp/stm32/CMSIS/CM3/DeviceSupport/ST/STM32F10x \
-    -I$(SRCDIR)/../bsp/stm32/CMSIS/CM3/CoreSupport \
-    -I$(SRCDIR)/../bsp/stm32/STM32F10x_StdPeriph_Driver/inc/ \
-    -DSTM32F10X_MD_VL \
     -nostartfiles \
     -fno-exceptions -fno-unwind-tables -fno-asynchronous-unwind-tables
 
