--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -3,10 +3,11 @@ MODULE_CFLAGS :=					\
   -nostdlib							\
   -isystem $(SRCDIR)/inc			\
   -fno-stack-protector				\
-  -fno-builtin
+  -fno-builtin						\
+  -I $(PROJECT_ROOT)/bsp
 
 LIBRARY := libc.a
 MODULE_CFLAGS += -static
-DIRS := string
+DIRS := string test
 
 include $(PROJECT_ROOT)/make/default.mk
