Added strtol and friends. Some tests but just the happy path.

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -8,6 +8,7 @@ MODULE_LDFLAGS := \
     -lbsp \
     -nostartfiles \
     -nostdlib \
+    -lgcc \
     -fno-exceptions \
     -fno-unwind-tables \
     -fno-asynchronous-unwind-tables \
