--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -22,6 +22,7 @@ MODULE_LDFLAGS := \
 
 MODULE_CPPFLAGS := \
     -I$(SRCDIR)/../bsp \
+    -I$(SRCDIR)/../libc/inc \
 	-I$(PROJECT_ROOT)/libc/test \
     -nostartfiles \
     -fno-exceptions -fno-unwind-tables -fno-asynchronous-unwind-tables
