Started migrating to Anvil toolchain

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,25 +1,22 @@
 
 BINARY := anvil
 
-LIBS := ../bsp/libbsp.a ../libc/libc.a
+LIBS := ../bsp/libbsp.a
 
 MODULE_LDFLAGS := \
     -L../bsp/ \
     -lbsp \
     -nostartfiles \
-    -nostdlib \
-    -lgcc \
     -fno-exceptions \
     -fno-unwind-tables \
     -fno-asynchronous-unwind-tables \
     -T $(SRCDIR)/$(ARCH)/lnfile.ld \
     -ffunction-sections \
     -fdata-sections \
-    -ffreestanding \
     -fno-move-loop-invariants \
     -Wl,--gc-sections \
     -Wl,-Map,"armcpp.map"
-
+ 
 MODULE_CPPFLAGS := \
     -I$(SRCDIR)/../bsp \
     -I$(SRCDIR)/../libc/inc \
